--- a/app/android/Tab_Writer/app/src/main/res/layout/fragment_info.xml
+++ b/app/android/Tab_Writer/app/src/main/res/layout/fragment_info.xml
@@ -3,17 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_settings"
-    android:backgroundTint="@color/colorGrey"
-    android:backgroundTintMode="multiply"
+    android:background="@drawable/bg_grey_settings"
     android:padding="10dp"
     tools:context=".InfoFragment">
 
     <TextView
+        android:id="@+id/textInfo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fontFamily="@font/arlon_regular"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/textInfo_color"
         android:textSize="13sp"
         android:lineHeight="28dp"
         android:text="@string/info_text" />
