--- a/app/android/Tab_Writer/app/src/main/res/layout/fragment_tab_view.xml
+++ b/app/android/Tab_Writer/app/src/main/res/layout/fragment_tab_view.xml
@@ -5,15 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:background="@drawable/back_settings"
-    android:backgroundTint="@color/colorGrey"
-    android:backgroundTintMode="multiply"
+    android:background="@drawable/bg_grey_settings"
     tools:context=".TabViewFragment">
 
     <com.github.mikephil.charting.charts.BubbleChart
         android:id="@+id/bubbleChart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textColor="@color/tab_view_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
