--- a/app/android/Tab_Writer/app/src/main/res/drawable/ic_home.xml
+++ b/app/android/Tab_Writer/app/src/main/res/drawable/ic_home.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#2A2A2A">
+    android:tint="@color/icon_color">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
