--- a/app/android/Tab_Writer/app/src/main/res/layout/fragment_record.xml
+++ b/app/android/Tab_Writer/app/src/main/res/layout/fragment_record.xml
@@ -4,9 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/back_settings"
-    android:backgroundTint="@color/colorGrey"
-    android:backgroundTintMode="multiply"
+    android:background="@drawable/bg_grey_settings"
     tools:context=".RecordFragment">
 
     <ImageView
@@ -27,9 +25,9 @@
         android:fontFamily="@font/arlon_regular"
         android:gravity="center"
         android:lineHeight="32dp"
-        android:text="PRESS THE BUTTON\nTO START RECORDING"
+        android:text="CONNECTING..."
         android:textAlignment="center"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/record_text_color"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +35,7 @@
 
     <ImageButton
         android:id="@+id/record_btn"
-        android:background="@drawable/back_settings"
-        android:backgroundTint="@color/colorGrey"
-        android:backgroundTintMode="multiply"
+        android:background="@drawable/bg_grey"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="20dp"
@@ -56,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/arlon_regular"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/record_timer_color"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
