--- a/app/android/Tab_Writer/app/src/main/res/values-night/themes.xml
+++ b/app/android/Tab_Writer/app/src/main/res/values-night/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/colorRed</item>
         <item name="colorOnSecondary">@color/colorBlack</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/colorBlack</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
