--- a/app/android/Tab_Writer/app/src/main/res/values/themes.xml
+++ b/app/android/Tab_Writer/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Tab_Writer" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.Tab_Writer" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorGrey</item>
         <item name="colorPrimaryVariant">@color/colorGreyDark</item>
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/colorRed</item>
         <item name="colorOnSecondary">@color/colorBlack</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/colorWhite</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
