--- a/app/android/Tab_Writer/app/src/main/res/layout/fragment_home.xml
+++ b/app/android/Tab_Writer/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_grey_settings"
-    tools:context=".HomeFragment">
+    tools:context=".layout.HomeFragment">
 
     <ImageView
         android:id="@+id/imageView2"
