--- a/app/android/Tab_Writer/app/src/main/res/layout/fragment_tab_list.xml
+++ b/app/android/Tab_Writer/app/src/main/res/layout/fragment_tab_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_grey_settings"
-    tools:context=".TabListFragment">
+    tools:context=".layout.TabListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tab_list_view"
