--- a/app/android/Tab_Writer/app/src/main/res/layout/fragment_tab_view.xml
+++ b/app/android/Tab_Writer/app/src/main/res/layout/fragment_tab_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:background="@drawable/bg_grey_settings"
-    tools:context=".TabViewFragment">
+    tools:context=".layout.TabViewFragment">
 
     <com.github.mikephil.charting.charts.BubbleChart
         android:id="@+id/bubbleChart"
