--- a/app/android/Tab_Writer/app/src/main/res/menu/navigation_menu.xml
+++ b/app/android/Tab_Writer/app/src/main/res/menu/navigation_menu.xml
@@ -20,6 +20,10 @@
     <item android:title="@string/title_altro">
         <menu>
             <item
+                android:id="@+id/nav_settings"
+                android:title="@string/nav_settings"
+                android:icon="@drawable/ic_settings" />
+            <item
                 android:id="@+id/nav_info"
                 android:title="@string/nav_info"
                 android:icon="@drawable/ic_info" />
