--- a/app/android/Tab_Writer/app/src/main/res/values-night/styles.xml
+++ b/app/android/Tab_Writer/app/src/main/res/values-night/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimaryDark">@color/colorGreyDark</item>
         <item name="colorAccent">@color/colorRed</item>
         <item name="android:statusBarColor">@color/colorBlack</item>
+        <item name="android:fontFamily">@font/arlon_regular</item>
     </style>
     <style name="AppTheme.DarkActionBar">
         <!-- Customize your theme here. -->
