--- a/app/android/Tab_Writer/app/src/main/res/navigation/main.xml
+++ b/app/android/Tab_Writer/app/src/main/res/navigation/main.xml
@@ -14,16 +14,24 @@
         android:id="@+id/nav_record"
         android:name="com.unibo.tab_writer.layout.RecordFragment"
         android:label="@string/nav_record"
-        tools:layout="@layout/fragment_record" />
+        tools:layout="@layout/fragment_record" >
+        <action
+            android:id="@+id/action_fragment_record_to_fragment_tab_view"
+            app:destination="@id/nav_tab"
+            app:exitAnim="@anim/fade_out"
+            app:enterAnim="@anim/fade_in" />
+    </fragment>
     <fragment
         android:id="@+id/nav_list"
         android:name="com.unibo.tab_writer.layout.TabListFragment"
         android:label="@string/nav_list"
-        tools:layout="@layout/fragment_tab_list" />
-    <fragment
-        android:id="@+id/nav_settings"
-        android:name="com.unibo.tab_writer.layout.SettingsFragment"
-        android:label="Impostazioni"/>
+        tools:layout="@layout/fragment_tab_list" >
+        <action
+            android:id="@+id/action_fragment_tab_list_to_fragment_tab_view"
+            app:destination="@id/nav_tab"
+            app:exitAnim="@anim/fade_out"
+            app:enterAnim="@anim/fade_in" />
+    </fragment>
     <fragment
         android:id="@+id/nav_info"
         android:name="com.unibo.tab_writer.layout.InfoFragment"
@@ -32,6 +40,6 @@
     <fragment
         android:id="@+id/nav_tab"
         android:name="com.unibo.tab_writer.layout.TabViewFragment"
-        android:label="fragment_view_tab"
+        android:label="Guitar Tab"
         tools:layout="@layout/fragment_tab_view" />
 </navigation>
