--- a/app/android/Tab_Writer/app/src/main/res/layout/fragment_home.xml
+++ b/app/android/Tab_Writer/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo_unibo"
+        android:src="@drawable/logo_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
